# ur5e_cell

./: .gitignore  .gitmodules  Readme.md  dependencies_rolling.repos  docker-gui.md  moveit_config.md  ur5e.repos  ur5e_workcell.repos
.github/workflows/: build.yaml  docker_build_pipeline.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
ur5_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_cell_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ur5_msa.ros2_control.xacro  ur5_msa.srdf  ur5_msa.urdf.xacro  ur5_msa_fake.urdf.xacro
ur5_cell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5e_cell_bringup/: CMakeLists.txt  package.xml
ur5e_cell_bringup/launch/: bringup_controller.launch.py  bringup_moveit.launch.py  ur5e_bringup.launch.py  ur5e_cell_bringup.launch.py  ur5e_moveit_bringup.launch.py  ur_control.launch.py
ur5e_cell_description/: CMakeLists.txt  package.xml
ur5e_cell_description/config/: initial_positions.yaml
ur5e_cell_description/config/ur5e/: default_kinematics.yaml  joint_limits.yaml
ur5e_cell_description/launch/: view_ur_cell.launch.py
ur5e_cell_description/meshes/: Gripper.stl  Pincer_1.stl
ur5e_cell_description/rviz/: config.rviz  view_robot.rviz
ur5e_cell_description/srdf/: ur5e_workcell.srdf
ur5e_cell_description/urdf/: robot_cell_clone.xacro  robot_cell_real.xacro  shunk_clone.xacro  shunk_egp50.xacro  workcell.urdf.xacro
ur5e_cell_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ur5e_cell_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur5e_workcell.ros2_control.xacro  ur5e_workcell.srdf  ur5e_workcell.urdf.xacro  ur5e_workcell_fake.urdf.xacro
ur5e_cell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5e_cell_msa_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_cell_msa_config/config/: kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_workcell.ros2_control.xacro  ur5e_workcell.srdf  ur5e_workcell.urdf.xacro
ur5e_cell_msa_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5e_cell_pick_n_place/: CMakeLists.txt  package.xml
ur5e_cell_pick_n_place/config/: moveitcpp.yaml
ur5e_cell_pick_n_place/launch/: pick_n_place.launch.py  pick_n_place_driver.launch.py
ur5e_cell_pick_n_place/src/: pick_n_place_node.cpp
ur5e_cell_point_to_point/: CMakeLists.txt  package.xml
ur5e_cell_point_to_point/launch/: point_to_point.launch.py
ur5e_cell_point_to_point/src/: point_to_point_node.cpp
workcell_description/: CMakeLists.txt  package.xml
workcell_description/config/: config.rviz
workcell_description/launch/: config.rviz  gazebo_bringup.launch.py  simulation.launch.py  ur5e_moveit.launch.py  ur_control.launch.py  view_ur.launch.py  workcell_bringup.launch.py  workcell_bringup.py
workcell_description/meshes/: Pincer_2.stl  Robotcell.stl
workcell_description/rviz/: view_robot.rviz
workcell_description/srdf/: ur5e_workcell.srdf
workcell_description/urdf/: camera.xacro  demo.urdf.xacro  gazebo_control.xacro  gripper.urdf.xacro  gripper.xacro  grippy.xacro  initial_positions.yaml  robot.xacro  robot_cage.xacro  robot_cell_clone.xacro  robotcell.xacro  shunk_egp50 copy.xacro  shunk_egp50.xacro  workcell.urdf  workcell.urdf.xacro
workcell_msa_config/: .setup_assistant  CMakeLists.txt  package.xml
workcell_msa_config/config/: moveit.rviz  ros2_controllers.yaml  ur5e_workcell.srdf  ur5e_workcell.urdf.xacro
workcell_msa_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
