<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_cell_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ragesh.ramachandran@ipa.fraunhofer.de">ragesh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>
  <depend>ur_robot_driver</depend>
  <depend>realsense2_description</depend>
  <depend>moveit</depend>
  <depend>moveit_ros</depend>
  <depend>moveit_setup_assistant</depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
