<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_cell_pick_n_place</name>
  <version>0.0.0</version>
  <description>Simple pick and place</description>
  <maintainer email="xxx@gmail.com">xxx</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit</depend>
  <depend>moveit_ros_planning</depend>
  <depend>ur_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
